--- a/en/style.css
+++ b/en/style.css
@@ -97,10 +97,11 @@ strong {
   width: 100%;
   max-width: 30rem;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .overlay__btn {
-  width: 50%;
+  width: 100%;
   height: 2.5rem;
   display: flex;
   justify-content: center;
@@ -142,7 +143,7 @@ a {
   align-items: center;
 }
 
-/* Not too many browser support this yet but it's good to add! */
+/* Not too many browsers support this yet but it's good to add! */
 @media (prefers-contrast: high) {
   .orb-canvas {
     display: none;
@@ -181,10 +182,6 @@ a {
 @media only screen and (max-width: 600px) {
   .overlay {
     padding: 1.5rem;
-  }
-
-  .overlay__btns {
-    flex-wrap: wrap;
   }
 
   .overlay__btn {
