--- a/Style/styles.css
+++ b/Style/styles.css
@@ -146,7 +146,7 @@ nav ul li a:hover {
     padding: 0;
     margin: 0 auto;
     max-width: 600px;
-    text-align: center; /* Center the list items */
+    text-align: center;
 }
 
 .executors-list li {
